--- a/build.gradle
+++ b/build.gradle
@@ -22,6 +22,7 @@ dependencies {
     implementation 'com.vaadin:vaadin-spring-boot-starter'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     implementation 'io.quickchart:QuickChart:1.0.0'
+    compile('org.springframework.boot:spring-boot-starter-web')
 }
 
 dependencyManagement {
