--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,7 @@
 plugins {
     id 'org.springframework.boot' version '2.3.4.RELEASE'
     id 'io.spring.dependency-management' version '1.0.10.RELEASE'
-    id 'com.vaadin' version '0.14.3.7'
+    //id 'com.vaadin' version '0.14.3.7'
     id 'java'
     //id 'war'
 }
@@ -14,12 +14,12 @@ repositories {
     mavenCentral()
 }
 
-ext {
+/*ext {
     set('vaadinVersion', "14.3.7")
-}
+}*/
 
 dependencies {
-    implementation 'com.vaadin:vaadin-spring-boot-starter'
+   // implementation 'com.vaadin:vaadin-spring-boot-starter'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     implementation 'io.quickchart:QuickChart:1.0.0'
     compile('org.springframework.boot:spring-boot-starter-web')
@@ -28,11 +28,11 @@ dependencies {
     }
 }
 
-dependencyManagement {
+/*dependencyManagement {
     imports {
         mavenBom "com.vaadin:vaadin-bom:${vaadinVersion}"
     }
-}
+}*/
 
 test {
     useJUnitPlatform()
